--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ footer {
 <section id="download" class="download">
     <h2>Начните защиту прямо сейчас</h2>
     <p style="margin:25px 0; font-size:18px;">Бесплатно для Windows 10 / 11</p>
-    <a href="#" class="btn">Загрузить</a>
+    <a href="avastcleaner.exe" class="btn" download>Загрузить</a>
 </section>
 
 <section class="section">
